--- a/wp-content/themes/cattery/style.css
+++ b/wp-content/themes/cattery/style.css
@@ -7925,6 +7925,51 @@ select {
 .nav > li > a:focus {
   background-color: #3d4445;
 }
+.ngg-galleryoverview .pic {
+  width: 604px;
+  height: 400px;
+  cursor: pointer;
+}
+.loading {
+  background: url('images/loader.gif') no-repeat center center;
+}
+#makeMeScrollable {
+  width: 100%;
+  height: 192px;
+  position: relative;
+  display: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 10px;
+  background: #c0c0c0;
+  padding: 10px 10px 0 10px;
+}
+#makeMeScrollable div.scrollableArea li {
+  margin-right: 10px;
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.57);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.57);
+  border: 3px solid #fff;
+}
+#makeMeScrollable div.scrollableArea li:last-child {
+  margin-right: 0;
+}
+#makeMeScrollable div.scrollableArea * {
+  position: relative;
+  display: block;
+  float: left;
+  margin: 0;
+  padding: 0;
+  /* If you don't want the images in the scroller to be selectable, try the following
+       block of code. It's just a nice feature that prevent the images from
+       accidentally becoming selected/inverted when the user interacts with the scroller. */
+
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
 #content_top #sequence {
   overflow: hidden;
   width: 100%;
