--- a/wp-content/themes/cattery/less/color.less
+++ b/wp-content/themes/cattery/less/color.less
@@ -152,13 +152,13 @@ body.theme_blue #top_header {
   background-color: rgba(14, 33, 42, 0.8);
 }
 body.theme_blue #top_header .main_navbar li a:hover {
-  background: #4baad3;
+  background: #b0b0b0;
 }
 body.theme_blue #top_header .main_navbar li.active {
-  background: #4baad3;
+  background: #a0a0a0;
 }
 body.theme_blue #top_header .main_navbar li.active a {
-  color: #ffffff !important;
+  color: #000 !important;
 }
 body.theme_blue #top_header .main_navbar a {
   color: #ffffff !important;
