--- a/wp-content/themes/cattery/less/content.less
+++ b/wp-content/themes/cattery/less/content.less
@@ -547,7 +547,7 @@ Start Content Section
     background: #CE4E4A;
 }
 #content .link_acomodation li.active a:after {
-    border-left: 10px solid #CE4E4A;
+    border-left: 10px solid #a0a0a0;
 }
 #content .link_acomodation li:hover {
     margin-right: 0;
@@ -1679,7 +1679,7 @@ select {
     
 }
 
-#makeMeScrollable
+.makeMeScrollable
 {
     width:100%;
     height: 128px;
@@ -1707,7 +1707,7 @@ select {
     
 }
 
-#makeMeScrollable div.scrollableArea *
+.makeMeScrollable div.scrollableArea *
 {
     position: relative;
     display: block;
