--- a/wp-content/themes/cattery/style.css
+++ b/wp-content/themes/cattery/style.css
@@ -6816,7 +6816,7 @@ Start Content Section
   background: #CE4E4A;
 }
 #content .link_acomodation li.active a:after {
-  border-left: 10px solid #CE4E4A;
+  border-left: 10px solid #a0a0a0;
 }
 #content .link_acomodation li:hover {
   margin-right: 0;
@@ -7933,7 +7933,7 @@ select {
 .loading {
   background: url('images/loader.gif') no-repeat center center;
 }
-#makeMeScrollable {
+.makeMeScrollable {
   width: 100%;
   height: 128px;
   position: relative;
@@ -7944,17 +7944,17 @@ select {
   background: #c0c0c0;
   padding: 10px 10px 0 10px;
 }
-#makeMeScrollable div.scrollableArea li {
+.makeMeScrollable div.scrollableArea li {
   margin-right: 10px;
   -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.57);
   -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.57);
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.57);
   border: 3px solid #fff;
 }
-#makeMeScrollable div.scrollableArea li:last-child {
+.makeMeScrollable div.scrollableArea li:last-child {
   margin-right: 0;
 }
-#makeMeScrollable div.scrollableArea * {
+.makeMeScrollable div.scrollableArea * {
   position: relative;
   display: block;
   float: left;
@@ -8405,13 +8405,13 @@ body.theme_blue #top_header {
   background-color: rgba(14, 33, 42, 0.8);
 }
 body.theme_blue #top_header .main_navbar li a:hover {
-  background: #4baad3;
+  background: #b0b0b0;
 }
 body.theme_blue #top_header .main_navbar li.active {
-  background: #4baad3;
+  background: #a0a0a0;
 }
 body.theme_blue #top_header .main_navbar li.active a {
-  color: #ffffff !important;
+  color: #000 !important;
 }
 body.theme_blue #top_header .main_navbar a {
   color: #ffffff !important;
